# Discord-LLM-AI

./: .env.example  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: build-and-publish.yml  build-linux.yml  build.yml  cargo-cache.yml  published-docker.yml  rust.yml
controller/: Cargo.toml
controller/src/: lib.rs
database/: Cargo.toml  diesel.toml
database/migrations/2024-09-21-152844_create_users/: down.sql  up.sql
database/migrations/2024-09-21-153611_create_conversations/: down.sql  up.sql
database/migrations/2024-09-21-153805_create_user_conversation_relation/: down.sql  up.sql
database/migrations/2024-09-21-153842_create_messages/: down.sql  up.sql
database/migrations/2024-10-22-161940_create_subscribe_channel/: down.sql  up.sql
database/src/: controller.rs  format_sql.rs  insert_model.rs  lib.rs  main.rs  model.rs  schema.rs  table_names.rs
database/src/controller/: conversation_controller.rs  message_controller.rs  subscribe_channel_controller.rs  user_controller.rs  user_conversation_controller.rs
inference_ai/: Cargo.toml
inference_ai/src/: lib.rs  main.rs  model.rs
setup/: Cargo.toml
setup/src/: main.rs
src/: commands.rs  main.rs  utility.rs
src/ai/: mod.rs
src/db/: mod.rs
