[workspace]
members = [
    "controller",
    "database",
    "inference_ai"
]

[workspace.dependencies]
controller = { path = "./controller" }
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "derive", "sqlite", "postgres", "json" ] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"

[package]
name = "bot_ai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
poise = "0.6"
dotenv = { workspace = true }
sqlx = { workspace = true }
inference_ai = { path = "./inference_ai" }
database = { path = "./database" }
sentry = "0.34.0"

[dependencies.serenity]
default-features = false
features = ["cache", "collector", "client", "model", "builder", "chrono", "http", "default_native_tls"]
version = "0.12"
