[workspace]
members = [
    "controller",
    "database",
    "inference_ai"
]

[workspace.dependencies]
controller = { path = "./controller" }
database = { path = "./database" }
diesel = { version = "2.2.0", features = ["postgres"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
inference_ai = { path = "./inference_ai" }

[package]
name = "bot_ai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
poise = "0.6"
dotenv = { workspace = true }
diesel = { workspace = true }
inference_ai = { workspace = true }
database = { path = "./database" }
sentry = "0.34.0"
controller = { workspace = true }

[dependencies.serenity]
default-features = false
features = ["cache", "collector", "client", "model", "builder", "chrono", "http", "default_native_tls"]
version = "0.12"
