[workspace]
members = [
    "database",
    "inference_ai"
]

[workspace.dependencies]
database = { path = "./database" }
chrono = "0.4.38"
diesel = { version = "2.2.0", features = ["postgres", "chrono"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
inference_ai = { path = "./inference_ai" }

[package]
name = "discord_bot_ai"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/michellao/Discord-LLM-AI"

[dependencies]
tokio = { workspace = true }
poise = "0.6"
dotenv = { workspace = true }
inference_ai = { workspace = true }
database = { workspace = true }
chrono = { workspace = true }
sentry = "0.34.0"

[dependencies.serenity]
default-features = false
features = ["cache", "collector", "client", "model", "builder", "chrono", "http", "default_native_tls"]
version = "0.12"
